# ros2-pinocchio

./: README.md
install/: local_setup.sh  setup.sh
install/pinocchio_ros2_example/lib/pinocchio_ros2_example/: fluid_dynamics_node.py  pinocchio_python_node.py
install/pinocchio_ros2_example/share/pinocchio_ros2_example/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pinocchio_ros2_example/share/pinocchio_ros2_example/cmake/: pinocchio_ros2_exampleConfig.cmake
install/pinocchio_ros2_example/share/pinocchio_ros2_example/config/: fluid_params.yaml
install/pinocchio_ros2_example/share/pinocchio_ros2_example/launch/: fluid_dynamics.launch.py
log/: latest_build
src/pinocchio_ros2_example/: .gitignore  CMakeLists.txt  package.xml
src/pinocchio_ros2_example/config/: fluid_params.yaml
src/pinocchio_ros2_example/launch/: fluid_dynamics.launch.py  fluid_dynamics_cpp.launch.py
src/pinocchio_ros2_example/models/: two_link.urdf
src/pinocchio_ros2_example/scripts/: fluid_dynamics_node.py  fluid_dynamics_verifier.py  joint_state_sine_pub.py
src/pinocchio_ros2_example/src/: pinocchio_node.cpp
src/pinocchio_ros2_example/src/fluid_dynamics_cpp/: fluid_dynamics_cpp_node.cpp
